# libcodec2-MSVC

./: CMakeLists.txt
misc/: CMakeLists.txt  extract.c  tdec.c  tnlp.c  vqtrain.c
src/: CMakeLists.txt  HRA_112_112.h  c2sim.c  c2wideband.h  codec2.c  codec2.h  codec2_cohpsk.h  codec2_fdmdv.h  codec2_fft.h  codec2_fifo.h  codec2_fm.h  codec2_ofdm.h  cohpsk.c  cohpsk_internal.h  complex_win32.c  complex_win32.h  dllexport.h  fdmdv_internal.h  filter.c  filter.h  fm.c  fmfsk.c  fmfsk.h  fmfsk_demod.c  fmfsk_mod.c  freedv_api.c  freedv_api.h  freedv_rx.c  freedv_tx.c  freedv_vhf_framing.h  fsk.c  fsk.h  fsk_demod.c  fsk_get_test_bits.c  fsk_mod_ext_vco.c  fsk_put_test_bits.c  golay23.c  golay23.h  gp_interleaver.h  horus_api.c  (+44 more)
stm32/: CMakeLists.txt
stm32/src/: sm1000_700d_main.c  sm1000_main.c
unittest/: CMakeLists.txt  function_trace.c  ofdm_mem.c  ofdm_stack.c  tcohpsk.c  tfsk.c  tnewamp1.c  tofdm.c
